AWS/tools_internal/eks-tools-internal/occoursesexplorer/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: occoursesexplorer
 labels:
   deployment: occoursesexplorer
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        deployment: occoursesexplorer
    spec:
      containers:
      - name: occoursesexplorer
        image: 836835706379.dkr.ecr.eu-west-3.amazonaws.com/oc/occoursesexplorer:latest
        ports:
        - containerPort: 8080
        imagePullPolicy: Always
