AWS/tools_internal/eks-tools-internal/occoursesexplorer/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: occoursesexplorer
  labels:
    app: occoursesexplorer
spec:
  ports:
    - name: http
      port: 8080
  selector:
    app: occoursesexplorer
