AWS/tools_internal/eks-tools-internal/occoursesexplorer/base/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: micro-ingress
  namespace: occoursesexplorer
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: occoursesexplorer.openclassrooms.tech
      http:
        paths:
          - backend:
              serviceName: occoursesexplorer
              servicePort: 8080
